--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,6 @@
   <title>Feedback</title>
 </head>
 <body>
-  <form action="/index" method="get">
-    <button>Authorize</button>
-  </form>
+  <a href="http://0.0.0.0:5000/"> kljlk </a>
 </body>
 </html>
